# RealizeOS-5

./: .dockerignore  .env.example  .gitattributes  .gitignore  AUDIT-REPORT.md  CONTRIBUTING.md  Dockerfile  GETTING-STARTED-V5.md  Install-RealizeOS.bat  LICENSE  Migrate-RealizeOS.bat  QUICKSTART.md  README.md  Uninstall-RealizeOS.bat  Update-RealizeOS.bat  cli.py  docker-compose.prod.yml  docker-compose.yml  project-context.md  pyproject.toml  realize-os.yaml  requirements-dev.txt  requirements.txt  setup-guide.md  setup.yaml.example  start-realizeos.bat  start-realizeos.command  start-realizeos.pyw
.autobuild/: program.md  project-context.md  quality-config.md  quality-pipeline.md
.autobuild/agents/: architecture-reviewer.md  builder.md  quality-scorer.md  security-reviewer.md  test-writer.md
.autobuild/evaluation/: architecture-checklist.md  review-checklist.md  security-checklist.md
.autobuild/intents/: _template.md  active-intent.md  feature.md  fix.md  optimize.md  refactor.md
.autobuild/programs/: iterative-build.md  optimization-loop.md  overnight-build.md  standard-build.md
.autobuild/results/: learnings.md  results.tsv
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
dashboard/: README.md  index.html  lint-results.txt  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/public/: manifest.json
dashboard/src/: App.tsx  index.css  main.tsx
data/audit/: audit.jsonl
developer_resources/: AUTOMATION-SETUP.md  CLAUDE.md  DEVELOPMENT-PROMPT.md  WEBSITE-CHANGES-PROMPT.md  setup-fix-plan.md  setup-guide.md
developer_resources/.claude/: settings.local.json
docs/: AUTOMATION-SETUP.md  api-reference.md  architecture.md  audit-playbook.md  concepts.md  configuration.md  full-guide.md  getting-started.md  lite-guide.md  quick-install.html  self-hosting-guide.md  skill-authoring.md  upgrade-from-v03.md  user-guide.html
docs/dev-process/: _README.md
plugins/: README.md
plugins/channels/: __init__.py  telegram_plugin.py  webhooks_plugin.py  whatsapp_plugin.py
realize-os-cli/: README.md  package-lock.json  package.json
realize-os-cli/src/: cli.ts
realize-os-cli/templates/: .env.ejs  docker-compose.yml.ejs
realize-os-cli/tests/: cli.test.ts
realize_api/: __init__.py  dependencies.py  error_handlers.py  main.py  middleware.py  response.py  security_middleware.py
realize_api/routes/: activity.py  agents_v2.py  approvals.py  auth.py  chat.py  dashboard.py  devmode.py  evolution.py  extensions.py  health.py  integrations.py  route_helpers.py  routing.py  security.py  settings.py  settings_llm.py  settings_memory.py  settings_reports.py  settings_security.py  settings_skills.py  settings_tools.py  settings_trust.py  setup.py  storage_settings.py  systems.py  venture_agents.py  venture_kb.py  venture_shared.py  ventures.py  (+2 more)
realize_core/: __init__.py  base_handler.py  cli.py  cli_main.py  config.py  init.py  scaffold.py  setup_wizard.py
realize_lite/: CLAUDE.md  README.md  realize-os.yaml
scripts/: deploy.sh  install.ps1  install.sh
shared/: identity.md  user-preferences.md  venture-worksheet.md
static/: index.html  sw.js
templates/: accounting.yaml  agency.yaml  architecture-firm.yaml  coaching.yaml  consulting.yaml  ecommerce.yaml  freelance.yaml  portfolio.yaml  property-management.yaml  real-estate-developer.yaml  real-estate.yaml  saas.yaml
tests/: __init__.py  conftest.py  test_activity_logger.py  test_agent_guardrails.py  test_agent_handoff.py  test_agent_integration.py  test_agent_loader.py  test_agent_persona.py  test_agent_pipeline.py  test_api_integration.py  test_api_routes.py  test_api_routes_v2.py  test_approval_tool.py  test_base_handler.py  test_base_provider.py  test_benchmark_cache.py  test_brand_profile.py  test_channels.py  test_classifier.py  test_cli.py  test_config.py  test_creative_pipeline.py  test_data_layer_audit.py  test_db_schema.py  test_devmode_audit.py  test_docker_config.py  test_eval_harness.py  test_evolution_api.py  test_evolution_engine.py  test_goal_injection.py  test_governance.py  test_hardening_phase2.py  test_hierarchy.py  test_ingestion_components.py  test_interfaces.py  test_kb_indexer.py  test_lifecycle.py  test_litellm_provider.py  test_llm_router.py  test_media.py  (+28 more)
(+612 files in other folders)
