[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realize-os"
version = "5.0.0"
description = "AI-native personal operations system — coordinated agents for your business"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
authors = [
    {name = "RealizeOS Team", email = "realizeos@realization.co.il"},
]
keywords = ["ai", "agents", "llm", "operations", "business", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30.0"]
gws = ["google-api-python-client>=2.100.0", "google-auth-oauthlib>=1.2.0"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "bandit[toml]"]

[project.scripts]
realize-os = "realize_core.cli_main:main"

[project.urls]
Homepage = "https://github.com/SufZen/RealizeOS-5"
Repository = "https://github.com/SufZen/RealizeOS-5"
Issues = "https://github.com/SufZen/RealizeOS-5/issues"
Documentation = "https://github.com/SufZen/RealizeOS-5/tree/main/docs"

[tool.setuptools.packages.find]
include = ["realize_core*", "realize_api*", "realize_lite*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md", "*.html", "*.json", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that take a long time (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["realize_core", "realize_api", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N802",   # function name should be lowercase (test classes)
]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["realize_core"]
omit = [
    "realize_core/tools/*",          # external integrations
    "realize_core/llm/*_client.py",  # LLM API clients (mocked in tests)
    "realize_core/memory/store.py",  # SQLite storage layer
]

[tool.coverage.report]
show_missing = true
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "logger\\.",
    "except ImportError",
]

[tool.bandit]
targets = ["realize_core", "realize_api"]
exclude_dirs = ["tests", "realize_lite"]
skips = [
    "B101",  # assert used (acceptable in non-test code for invariants)
    "B108",  # hardcoded tmp directory (used for test scaffolding)
]
